[package]
name = "jtop"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clearscreen = "2.0.1"
cpu-monitor = "0.1.1"
memory-stats = "1.1.0"
psutil = "3.2.2"
terminal_size = "0.3.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
